--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass-watch": "sass --watch ."
+    "sass-watch": "sass --watch .",
+    "dev": "ts-node-dev --respawn --transpileOnly src/proxy-server.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +57,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
 }
